# routes/api.php
@@ -2,15 +2,18 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\API\DepartmentController;
-use App\Http\Controllers\API\CycleController;
-use App\Http\Controllers\API\UserController;
-use App\Http\Controllers\API\FirebaseController;
+use App\Http\Controllers\API\V1\DepartmentController;
+use App\Http\Controllers\API\V1\CycleController;
+use App\Http\Controllers\API\V1\UserController;
+use App\Http\Controllers\API\V1\FirebaseController;
 
-use App\Http\Controllers\API\RoleController;
-use App\Http\Controllers\API\ModuleController;
-use App\Http\Controllers\API\AuthController;
+use App\Http\Controllers\API\V1\RoleController;
+use App\Http\Controllers\API\V1\ModuleController;
+use App\Http\Controllers\API\V1\AuthController;
+use App\Http\Controllers\API\V1\RetoController as RetoControllerV1;
+use App\Http\Controllers\API\V2\RetoController as RetoControllerV2;
 use App\Http\Controllers\Auth\ForgotPasswordController;
+
 
 
 use App\Models\User;
@@ -36,46 +39,47 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 
 
-Route::middleware(['auth:sanctum'])->group(function () {
-    Route::resources([
-        'departments' => DepartmentController::class,
-        'roles' => RoleController::class,
-        'cycles' => CycleController::class,
-        'users' => UserController::class,
-        'modules' => ModuleController::class,
-    ]);
-});
+
 
 Route::group(['middleware' => 'auth'], function() {
-    
-
     Route::group(['prefix' => 'auth'], function() {
         Route::post('logout',[AuthController::class,'logout']);
     });
 
 });
 
-Route::group(['prefix' => 'auth'], function() {
-    Route::post('login',[AuthController::class,'login']);
-})->withoutMiddleware(['auth:sanctum']);
 
 
 
-Route::put('users/{user}/update-password', [UserController::class.'@updatePassword']);
-Route::post('/users/{userId}/enroll/{cycleId}', [UserController::class, 'enrollStudentInCycle']);
+
+
 
 //FIREBASE
 Route::get('/firebase/fmcTesting', [FirebaseController::class, 'fcmTesting']);
 
 
+Route::group(['prefix' => 'v1'], function() {
 
 
-/* Route::group(['prefix' => 'v1'], function() {
+    Route::middleware(['auth:sanctum'])->group(function () {
+        Route::resources([
+            'departments' => DepartmentController::class,
+            'roles' => RoleController::class,
+            'cycles' => CycleController::class,
+            'users' => UserController::class,
+            'modules' => ModuleController::class,
+        ]);
+
+        Route::post('logout',[AuthController::class,'logout']);
+    });
+
+    Route::put('users/{user}/update-password', [UserController::class.'@updatePassword']);
+    Route::post('/users/{userId}/enroll/{cycleId}', [UserController::class, 'enrollStudentInCycle']);
+
     Route::group(['prefix' => 'auth'], function() {
         Route::post('login',[AuthController::class,'login'])->withoutMiddleware(['auth:sanctum']);
-        Route::post('logout',[AuthController::class,'logout'])->middleware('auth:sanctum');
     });
-    Route::group(['prefix' => 'roles', function() {
+    /* Route::group(['prefix' => 'roles', function() {
         Route::resources(['roles' => RoleController::class]);
     }]);
     Route::group(['prefix' => 'departments', function() {
@@ -87,17 +91,19 @@ Route::get('/firebase/fmcTesting', [FirebaseController::class, 'fcmTesting']);
     Route::group(['prefix' => 'users', function() {
         Route::put('/{user}/update-password', [UserController::class.'@updatePassword']);
         Route::post('/{userId}/enroll/{cycleId}', [UserController::class, 'enrollStudentInCycle']);
-        Route::resources(['users' => UserController::class]);
     }]);
     Route::group(['prefix' => 'modules', function() {
         Route::resources(['modules' => ModuleController::class]);
-    }]);
+    }]); */
+    Route::group(['prefix' => 'reto'], function() {
+        Route::get('/version',[RetoControllerV1::class,'whatVersionAmI']);
+    })->withoutMiddleware(['auth:sanctum']);
 });
 
+
 Route::group(['prefix' => 'v2'], function() {
-    Route::group(['prefix' => 'auth'], function() {
-        Route::post('login',[AuthController::class,'login'])->withoutMiddleware(['auth:sanctum']);
-        Route::post('logout',[AuthController::class,'logout'])->middleware('auth:sanctum');
-    });
-}); */
+    Route::group(['prefix' => 'reto'], function() {
+        Route::get('/version',[RetoControllerV2::class,'whatVersionAmI']);
+    })->withoutMiddleware(['auth:sanctum']);
+});
 
